--- a/api/wrangler.toml
+++ b/api/wrangler.toml
@@ -5,7 +5,7 @@ compatibility_date = "2023-10-10"
 [[kv_namespaces]]
 binding = "KV"
 # Obtain `id` from your Cloudflare Workers KV dashboard
-id = "a083f99d481040e7b47e5afea85b2cb6"
+id = "YOUR_ID_HERE"
 
 [triggers]
 crons = ["*/10 * * * *"]
